# bodytracker-bt

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DEBUG_CONTEXT_README.md  README.md  vcpkg.json
android/FBTPhoneCamera/: README.md  settings.gradle.kts
android/FBTPhoneCamera/app/: build.gradle.kts
android/FBTPhoneCamera/app/src/main/: AndroidManifest.xml
android/FBTPhoneCamera/app/src/main/java/dev/bodytracker/phonecamera/: MainActivity.kt
android/FBTPhoneCamera/app/src/main/res/values/: styles.xml
calib/: default.json
config/: default.json
docs/: ANDROID_NETWORK_CAMERA.md  BUILD_ENVIRONMENT.md  CODEX_FULL_KNOWLEDGE.md  CONFIG_CONTRACTS.md  EPIPOLAR_PROOF_OF_CONSUMPTION.md  FLOOR_GEOMETRY_CALIBRATION.md  IMPLEMENTATION_NOTES.md  MANUAL_PLANK_FLOOR_CALIBRATION.md  MONOCULAR_REAL_FOOTAGE_VALIDATION.md  PERFORMANCE_QA_INFRASTRUCTURE.md  REJECTED_FEATURES.md  RUNTIME_BRINGUP.md  SYNTHETIC_STEREO_DIAGNOSTICS.md  audit_triage_report.json  phase13_structure_report.json
docs/imported-history/: superpowers-openai-curated-this-commits.tsv  superpowers-openai-curated-this.md
models/: rtmw-dw-x-l-cocktail14-384x288.onnx.sha256  rtmw3d-x-cocktail14-384x288.onnx.sha256
qa/performance/: default_budget.json
src/: main.cpp  nlohmann_json.hpp
src/calibration/: body_calibrator.cpp  body_calibrator.h  calibration_io.cpp  calibration_io.h  calibration_types.h  floor_calibrator.cpp  floor_calibrator.h  intrinsic_calibrator.cpp  intrinsic_calibrator.h  stereo_calibrator.cpp  stereo_calibrator.h
src/capture/: camera_device.cpp  camera_device.h  capture_health.cpp  capture_health.h  frame.h  frame_pairer.cpp  frame_pairer.h  frame_slot.h  network_camera_source.cpp  network_camera_source.h
src/core/: config.cpp  config.h  logging.cpp  logging.h  math.h  profiler.h  status.h  timing.cpp  timing.h  types.h
src/debug/: debug_snapshot.h  depth_provenance.h  depth_trace.h  overlay_draw.cpp  overlay_draw.h  replay_log.cpp  replay_log.h  replay_player.cpp  replay_player.h  world_debug.cpp  world_debug.h
src/inference/: halpe26_contract.h  keypoint_contract.h  rtmpose_decode.cpp  rtmpose_decode.h  rtmpose_model_contract.cpp  rtmpose_model_contract.h  rtmpose_session.cpp  rtmpose_session.h
src/io/: bridge_protocol.h  hmd_provider.cpp  hmd_provider.h  osc_sender.cpp  osc_sender.h  steamvr_provider.cpp  steamvr_provider.h  steamvr_tracker_bridge.cpp  steamvr_tracker_bridge.h
src/monocular_depth/: hmd_depth_scale.cpp  hmd_depth_scale.h
src/steamvr_driver/: driver_bodytracker.cpp
src/tracking/: anchor_space_mapper.cpp  anchor_space_mapper.h  body_model.cpp  body_model.h  body_solver.cpp  body_solver.h  body_state.cpp  body_state.h  contact_constraints.cpp  contact_constraints.h  epipolar_geometry.cpp  epipolar_geometry.h  foot_frame.cpp  foot_frame.h  foot_support.cpp  foot_support.h  geometry_cache.cpp  geometry_cache.h  identity_assignment.cpp  identity_assignment.h  joint_limits.cpp  joint_limits.h  measurement_weighting.h  monocular_projection.cpp  monocular_projection.h  motion_consistency_filter.cpp  motion_consistency_filter.h  posture_mode.cpp  posture_mode.h  reliability.cpp  reliability.h  roi_tracker.cpp  roi_tracker.h  room_depth_map.cpp  room_depth_map.h  root_support.cpp  root_support.h  steamvr_alignment.cpp  steamvr_alignment.h  steamvr_alignment_json.h  (+16 more)
src/ui/: desktop_ui.cpp  desktop_ui.h
src/ui/app/: app.js  index.html  styles.css
src/ui/app/js/: bridge.js  command-bus.js  format.js  store.js
src/ui/app/phone/: phone-camera-server.mjs  phone-camera.html  phone-site.json  start-phone-camera.ps1  stop-phone-camera.ps1
src/web/: runtime_state.h
steamvr_driver/: driver.vrdrivermanifest
tests/: airborne_pipeline_regression_test.cpp  anchor_space_mapper_test.cpp  body_model_seed_test.cpp  body_state_test.cpp  config_test.cpp  contact_constraint_cleanup_test.cpp  ctest_registration_test.py  depth_provenance_test.cpp  epipolar_geometry_test.cpp  floor_geometry_calibrator_behavior_test.cpp  floor_plane_test.cpp  foot_support_test.cpp  frame_pairer_test.cpp  geometry_cache_test.cpp  griddy_motion_regression_test.cpp  hmd_provider_test.cpp  identity_adversarial_test.cpp  identity_assignment_test.cpp  live_bringup_readiness_test.py  live_preflight_doctor_test.py  measurement_weighting_test.cpp  model_asset_test.cpp  monocular_real_footage_validation_test.py  monocular_tracking_test.cpp  motion_consistency_filter_test.cpp  network_camera_lifecycle_test.cpp  network_camera_source_lifecycle_test.cpp  osc_encoding_performance_test.cpp  osc_packet_test.cpp  performance_budget_tool_test.py  profiler_budget_test.cpp  reliability_confidence_test.cpp  reliability_fuzz_test.cpp  replay_log_export_test.cpp  replay_player_contract_test.cpp  root_support_test.cpp  rtmpose_contract_test.cpp  runtime_control_wiring_test.py  steamvr_alignment_test.cpp  synthetic_stereo_diagnostic_test.py  (+13 more)
tests/fakes/: fake_network_camera_client.h  fake_osc_transport.h
tests/stubs/opencv2/: core.hpp
tools/: apply-chatgpt-browser-package.ps1  auto-rebuild-bodytracker.ps1  check_performance_budget.py  floor_pattern_graph_probe.py  floor_pattern_strict_gate.py  git-auto-sync.ps1  inspect_onnx_contract.py  install-auto-rebuild-task.ps1  install-auto-sync-task.ps1  install_bodytracker_steamvr_driver.ps1  live_preflight_doctor.py  rebuild-release-payload.ps1  score_floor_geometry_replay.py  synthetic_stereo_diagnostic.py  uninstall_bodytracker_steamvr_driver.ps1  v24_hardwood_visible_segments_smoke.py  validate_monocular_footage.py  visual_eval_image.py
